New Api added in preauth & paynow services. Also implemented it's configuration in swagger.json
